get company list API　追加

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,13 +1,14 @@
 spring.application.name=stacks
 server.port=8085
+file.upload-dir=/Users/js/Desktop/stacks-front/public/assets/img/company
 
-# PostgreSQL ?????? ?? ??
+# PostgreSQL
 spring.datasource.url=jdbc:postgresql://localhost:5432/stacks
 spring.datasource.username=js
 spring.datasource.password=1234
 spring.datasource.driver-class-name=org.postgresql.Driver
 
-# JPA/Hibernate ??
+# JPA/Hibernate
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
